[package]
name = "aes-gcm"
version = "0.9.0-pre"
description = """
Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
Authenticated Encryption with Associated Data (AEAD) Cipher
with optional architecture-specific hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
categories = ["cryptography", "no-std"]

[dependencies]
aead = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx.git" default-features = false }
aes = { git = "https://github.com/mesalock-linux/rustcrypto-block-ciphers-sgx.git" }
cipher = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx.git" }
ctr = { git = https://github.com/mesalock-linux/rustcrypto-stream-ciphers-sgx }
ghash = { git = "https://github.com/commerceblock/universal-hashes.git" }
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx.git", tag = "sgx_1.1.3" }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.4", features = ["dev"], default-features = false }
hex-literal = "0.2"

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]
stream = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
